cabal-version:      2.4
name:               AdventOfCode2021
version:            0.1.0.0
author:             Jussi Vaihia
maintainer:         jussiava@gmail.com

library
    build-depends:    base ^>=4.14.3.0
        , containers
        , lens
        , megaparsec
        , parsec
        , pretty-simple
        , regex-tdfa
        , split
        , text
        , vector
        , void
    hs-source-dirs:   src
    default-language: Haskell2010
